; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavformat/tests/extr_srtp.c_test_decrypt.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavformat/tests/extr_srtp.c_test_decrypt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.SRTPContext = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.SRTPContext*, i32*, i32, i32*)* @test_decrypt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @test_decrypt(%struct.SRTPContext* %0, i32* %1, i32 %2, i32* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.SRTPContext*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  store %struct.SRTPContext* %0, %struct.SRTPContext** %6, align 8
  store i32* %1, i32** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32* %3, i32** %9, align 8
  %10 = load i32*, i32** %9, align 8
  %11 = load i32*, i32** %7, align 8
  %12 = load i32, i32* %8, align 4
  %13 = call i32 @memcpy(i32* %10, i32* %11, i32 %12)
  %14 = load %struct.SRTPContext*, %struct.SRTPContext** %6, align 8
  %15 = load i32*, i32** %9, align 8
  %16 = call i32 @ff_srtp_decrypt(%struct.SRTPContext* %14, i32* %15, i32* %8)
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %23, label %18

18:                                               ; preds = %4
  %19 = load i32*, i32** %9, align 8
  %20 = load i32, i32* %8, align 4
  %21 = call i32 @print_data(i32* %19, i32 %20)
  %22 = load i32, i32* %8, align 4
  store i32 %22, i32* %5, align 4
  br label %24

23:                                               ; preds = %4
  store i32 -1, i32* %5, align 4
  br label %24

24:                                               ; preds = %23, %18
  %25 = load i32, i32* %5, align 4
  ret i32 %25
}

declare dso_local i32 @memcpy(i32*, i32*, i32) #1

declare dso_local i32 @ff_srtp_decrypt(%struct.SRTPContext*, i32*, i32*) #1

declare dso_local i32 @print_data(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
